

DescTools 0.99.32 (2020-02-01)
------------------------------

NEW FUNCTIONS ADDED:
  * ColToOpaque(), RgbToHex() are two new color converter functions.
  
UPDATED FUNCTIONS:
  * WrdCellRange's arguments have been renamed from old: rstart, rend to 
    new: from, to.
  * WrdTableBorders() loses its wrd argument, the information is now 
    extracted directly from wtab.

BUGFIXES:
  * Cramer's V bias correction is corrected (hmm...).

DEPRECATED:
  *





DescTools 0.99.31 (2019-12-21)
------------------------------

NEW FUNCTIONS ADDED:
  * WrdUpdateFields() can be used to update fields in a Word document.
  * Mgp() does the same for axis title, labels and line as Mar() does
    for the margins.
  * PlotPairs() is a more specific pairs() variant. 
  * IQRw() supports weights for calculating the interquartile range.

UPDATED FUNCTIONS:
  * ToXL() uses a faster create function for XL column names. 
  * ToXL() will use a more elaborated export for tables, matrices and arrays.
  * GetNewWrd() will insert a title at the bookmark "Main" in the document.
  * CramerV() and TschuprowT() get a bias correction option.
  * Recycle uses an optimised "getmaxdim" logic (thanks to moodymudskipper 
    for the suggestion).
  * Mode() gets a more elaborated interface and returns all modes if there
    are several.
  * SetNames() will recycle provided names and supports abbreviations.    

BUGFIXES:
  * ToWrd() for characters works again after an error crept into v. 0.99.30
    (due to insufficient testing).
  * TTestA() did not exclude the paired option, which should have been the case.
    (Credits to Vilmantas Gegzna)
  * Dummy() will always return a matrix instead of dropping dimensions which 
    have only one level. (Credits to Daniel Wollschlaeger)
  * XLGetrange() will not refuse to import areas with XLErrors now, cell formatted
    as dates will be recognised and empty areas will not cause an error 
    anymore.