@@ -98,6 +98,7 @@ Authors@R: c(
   person("Matthias"      , "Templ",               role = c("ctb")),
   person("Terry"         , "Therneau",            role = c("ctb")),
   person("Yves"          , "Tille",               role = c("ctb")),
+  person("Luis"          , "Torgo",               role = c("ctb")),
   person("Adrian"        , "Trapletti",           role = c("ctb")),
   person("Joshua"        , "Ulrich",              role = c("ctb")),
   person("Kevin"         , "Ushey",               role = c("ctb")),
