@@ -5,6 +5,8 @@ DescTools 0.99.32 (2020-02-01)
 
 NEW FUNCTIONS ADDED:
   * ColToOpaque(), RgbToHex() are two new color converter functions.
+  * KnnImputation() and CentralValue() have been borrowed from the 
+    DMwR package.
   
 UPDATED FUNCTIONS:
   * WrdCellRange's arguments have been renamed from old: rstart, rend to 
